--- a/MacOSApp/MacOSApp.entitlements
+++ b/MacOSApp/MacOSApp.entitlements
@@ -5,7 +5,13 @@
 	<key>com.apple.developer.aps-environment</key>
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
-	<array/>
+	<array>
+		<string>iCloud.01lab</string>
+	</array>
+	<key>com.apple.developer.icloud-services</key>
+	<array>
+		<string>CloudKit</string>
+	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)live.ShareToWatch.iOSApp</string>
 	<key>com.apple.security.app-sandbox</key>
